--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Shopping Cart</h1>
-    <div>
+    <div class="items">
         <p>Available Items: </p>
         <button id="add-apple">Add Apple</button>
         <button id="add-blueberries">Add Blueberries</button>
@@ -20,6 +20,6 @@
             <!--Items to go here-->
         </ul>
     </div>
-    <script>src="script.js"</script>
+    <script src="script.js"></script>
 </body>
 </html>
